--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,12 @@
             <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.ejml/core -->
+        <!-- https://mvnrepository.com/artifact/org.ejml/all -->
         <dependency>
             <groupId>org.ejml</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>all</artifactId>
             <version>0.30</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
