--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/tomscholer/Desktop/Mater AI/Autonomous Robotics/Assignments/ejml-v0.38-libs/ejml-cdense-0.38.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/tomscholer/Desktop/Mater AI/Autonomous Robotics/Assignments/ejml-v0.38-libs/ejml-core-0.38.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/tomscholer/Desktop/Mater AI/Autonomous Robotics/Assignments/ejml-v0.38-libs/ejml-ddense-0.38.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/tomscholer/Desktop/Mater AI/Autonomous Robotics/Assignments/ejml-v0.38-libs/ejml-dsparse-0.38.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/tomscholer/Desktop/Mater AI/Autonomous Robotics/Assignments/ejml-v0.38-libs/ejml-fdense-0.38.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/tomscholer/Desktop/Mater AI/Autonomous Robotics/Assignments/ejml-v0.38-libs/ejml-simple-0.38.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/tomscholer/Desktop/Mater AI/Autonomous Robotics/Assignments/ejml-v0.38-libs/ejml-zdense-0.38.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
