--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,11 @@
             <artifactId>all</artifactId>
             <version>0.30</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+        </dependency>
     </dependencies>
 </project>
